--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -9,23 +9,29 @@ Vagrant.configure(2) do |config|
     vb.cpus = VM_CPU
     vb.memory = VM_MEMORY
   end
-  config.landrush.enabled = true
   config.vm.define vm_name = "dev" do |config|
-    config.cache.scope = :box
+    if vagrant.has_plugin?("vagrant-cachier")
+      config.cache.scope = :box
+    end
     config.vm.hostname = vm_name
-    config.landrush.tld = vm_name
     config.vm.network "private_network", ip: GUEST_IP
   end
   config.vm.provision "shell", inline: "sudo apt-get update"
   config.vm.provision :shell, :path => "setup.sh", :args => [USER_NAME]
-## SYNCED FOLDER: enable after first 'vagrant up', when user exist
-  SYNCED_FOLDERS.each do |folder|
-    config.vm.synced_folder SYNCED_FOLDERS_PATH+folder, folder,
-      owner: USER_NAME, group: USER_NAME, mount_options: ["dmode=775,fmode=664"], disabled: SYNCED_FOLDERS_ENABLED
+## SYNCED FOLDER: do not enable if the path does not exist
+  if SYNCED_FOLDERS_ENABLED
+    SYNCED_FOLDERS.each do |folder|
+      config.vm.synced_folder SYNCED_FOLDERS_PATH+folder, folder,
+        owner: USER_NAME, group: USER_NAME, mount_options: ["dmode=775,fmode=664"], disabled: SYNCED_FOLDERS_ENABLED
+    end
   end
 ## Landrush host entries
-  DNS_ENTRIES.each do |entry|
-    config.landrush.host entry, DNS_IP
+  if vagrant.has_plugin?("vagrant-landrush")
+    config.landrush.enabled = true
+    config.landrush.tld = vm_name
+    DNS_ENTRIES.each do |entry|
+      config.landrush.host entry, DNS_IP
+    end
   end
 
 end
