--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure(2) do |config|
     vb.memory = VM_MEMORY
   end
   config.vm.define vm_name = "dev" do |config|
-    if vagrant.has_plugin?("vagrant-cachier")
+    if Vagrant.has_plugin?("vagrant-cachier")
       config.cache.scope = :box
     end
     config.vm.hostname = vm_name
@@ -26,7 +26,7 @@ Vagrant.configure(2) do |config|
     end
   end
 ## Landrush host entries
-  if vagrant.has_plugin?("vagrant-landrush")
+  if Vagrant.has_plugin?("vagrant-landrush")
     config.landrush.enabled = true
     config.landrush.tld = vm_name
     DNS_ENTRIES.each do |entry|
